# shape-norm

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
kpsn/: clouds.py  config.py  logging.py  pca.py  util.py
kpsn/fitting/: em.py  methods.py  scans.py
kpsn/io/: __init__.py  alignment.py  armature.py  dataset.py  dataset_refactor.py  features.py  loaders.py  utils.py
kpsn/models/: joint.py  setup.py  util.py
kpsn/models/morph/: __init__.py  bone_length.py  lowrank_affine.py
kpsn/models/pose/: __init__.py  gmm.py
kpsn/project/: paths.py
kpsn/viz/: __init__.py  _style.py  general.py  model.py  scans.py  styles.py  util.py  videos.py
kpsn/viz/stylesheets/: vscode_dark.mplstyle
shape_norm/: clouds.py  config.py  pca.py
shape_norm/fitting/: em.py  methods.py  scans.py
shape_norm/io/: alignment.py  armature.py  dataset_refactor.py  features.py  utils.py
shape_norm/models/: instantiation.py  setup.py  util.py
shape_norm/models/morph/: __init__.py  (+1 more)
shape_norm/project/: paths.py
shape_norm/viz/: __init__.py  _style.py  general.py  model.py  scans.py  util.py  videos.py
test/notebooks/: 24-01-30_mo-ontogeny.ipynb  24-02-07_mo-ontogeny.ipynb  24-02-07_pca-feat.ipynb  24-03-05_fit-kpms.ipynb  24-03-05_moont-scan.ipynb  24-03-19_keypt-space-morph.ipynb  24-04-10_dataset-refactor.ipynb  24-07-31_unit-tests.ipynb  24-08-07_lra-init.ipynb  24-09-04_small-ontog-tests.ipynb  lrakp-momode.ipynb  lrakp-notwild.ipynb  lrakp.ipynb  lrasamp.ipynb
test/scripts/: fit-kpms-blscale.py  fit-kpsn-blscale.py  fit-kpsn-ontog.py
theory/: models.tex
(+5 files in other folders)
