[metadata]
name = shape-norm
author = Kai Fox
author_email = kaijordanfox@gmail.com
url = https://github.com/kaijfox/shape-norm
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    tensorflow_probability
    tqdm joblib
    ruamel.yaml
    bidict
    frozendict
    optax
    matplotlib
    scikit-learn
    jaxtyping
    opencv-python-headless
    imageio
    ipykernel # to easily add jupyter kernel
    seaborn
    jax==0.4.16
    scipy==1.12.0 # required for jax==0.4.16 since later versions lack `scipy.linalg.tril`

[options.package_data]
* = *.md

[versioneer]
VCS = git
style = pep440
versionfile_source = shape-norm/_version.py
versionfile_build = shape-norm/_version.py
tag_prefix =
parentdir_prefix = 